// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBar snapshots renders MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid WindowText;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid WindowText;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a error MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--error
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FDE7E9;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #ff0000;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #e81123;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #A80000;
              display: inline-block;
              font-family: "FabricMDL2Icons-3";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="ErrorBadge"
      >
        
      </i>
    </div>
    <div
      aria-live="assertive"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="alert"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a info MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid WindowText;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid WindowText;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid WindowText;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid WindowText;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline error MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--error
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FDE7E9;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #ff0000;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #e81123;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #A80000;
              display: inline-block;
              font-family: "FabricMDL2Icons-3";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="ErrorBadge"
      >
        
      </i>
    </div>
    <div
      aria-live="assertive"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="alert"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline info MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid WindowText;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid WindowText;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline severeWarning MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--severeWarning
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FED9CC;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #ff0000;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #d83b01;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #D83B01;
              display: inline-block;
              font-family: "FabricMDL2Icons-1";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Warning"
      >
        
      </i>
    </div>
    <div
      aria-live="assertive"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="alert"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline success MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--success
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #DFF6DD;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #bad80a;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #107c10;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #107C10;
              display: inline-block;
              font-family: "FabricMDL2Icons-2";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Completed"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a multiline warning MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--warning
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FFF4CE;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #fff100;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #966400;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #797775;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a severeWarning MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--severeWarning
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FED9CC;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #ff0000;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #d83b01;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #D83B01;
              display: inline-block;
              font-family: "FabricMDL2Icons-1";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Warning"
      >
        
      </i>
    </div>
    <div
      aria-live="assertive"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="alert"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a success MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--success
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #DFF6DD;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #bad80a;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #107c10;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #107C10;
              display: inline-block;
              font-family: "FabricMDL2Icons-2";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Completed"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageBar snapshots renders a warning MessageBar correctly 1`] = `
<div
  className=
      ms-MessageBar
      ms-MessageBar--warning
      ms-MessageBar-multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #FFF4CE;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-height: 32px;
        width: 100%;
        word-break: break-word;
      }
      & .ms-Link {
        color: #005A9E;
      }
      & .ms-Link:hover {
        color: #004578;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        -ms-high-contrast-adjust: none;
        background: transparent;
        border: 1px solid #fff100;
        color: WindowText;
        forced-color-adjust: none;
      }
      @media screen and (-ms-high-contrast: black-on-white), screen and (forced-colors: active) and (prefers-color-scheme: light){& {
        border: 1px solid #966400;
      }
>
  <div
    className=
        ms-MessageBar-content
        {
          display: flex;
          line-height: normal;
          width: 100%;
        }
        @media only screen and (min-width: 0px) and (max-width: 479px){& {
          display: grid;
          grid-template-areas: 
                    "icon text close"
                    "action action action"
                  ;
          grid-template-columns: auto 1fr auto;
          grid-template-rows: 1fr auto;
        }
  >
    <div
      aria-hidden={true}
      className=
          ms-MessageBar-icon
          {
            display: flex;
            flex-shrink: 0;
            font-size: 16px;
            margin-bottom: 8px;
            margin-left: 12px;
            margin-right: 0;
            margin-top: 8px;
            min-height: 16px;
            min-width: 16px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: icon;
          }
    >
      <i
        aria-hidden={true}
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #797775;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              color: WindowText;
              forced-color-adjust: none;
            }
        data-icon-name="Info"
      >
        
      </i>
    </div>
    <div
      aria-live="polite"
      className=
          ms-MessageBar-text
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-grow: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 8px;
            margin-right: 12px;
            margin-top: 8px;
            min-width: 0px;
          }
          @media only screen and (min-width: 0px) and (max-width: 479px){& {
            grid-area: text;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            forced-color-adjust: none;
          }
      id="MessageBar0"
      role="status"
    >
      <span
        className=
            ms-MessageBar-innerText
            {
              line-height: 16px;
            }
            & span a:last-child {
              padding-left: 4px;
            }
      >
        <span>
          Message
        </span>
      </span>
    </div>
  </div>
</div>
`;
